Committing Java 8 compatible code to its own branch